added server config to API and extended measurement analysis
